# ambernote

./: .editorconfig  .gitignore  LICENSE.md  README.md  manage.py  package.json  pyproject.toml
ambernote/: asgi.py  pagination.py  urls.py  views.py  wsgi.py
ambernote/amber/: admin.py  apps.py  models.py  permissions.py  urls.py
ambernote/amber/fixtures/: testdata-1.yaml
ambernote/amber/migrations/: 0001_initial.py
ambernote/amber/tests/: __init__.py  member.py  note.py  notespace.py  tag.py  user.py
ambernote/amber/views/: __init__.py  base.py  member.py  note.py  notelog.py  notespace.py  tag.py  user.py
ambernote/authx/: apps.py  models.py  serializers.py  urls.py  views.py
ambernote/authx/migrations/: 0001_initial.py
ambernote/settings/: common.py  development.py  production.py
